# ChangeLog for app-shells/bash
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-shells/bash/ChangeLog,v 1.306 2012/03/28 18:13:09 vapier Exp $

  28 Mar 2012; Mike Frysinger <vapier@gentoo.org> bash-4.2_p20.ebuild,
  bash-4.2_p24.ebuild:
  Fix cross-compiling after move to external readline.

  28 Mar 2012; Mike Frysinger <vapier@gentoo.org> bash-4.2_p20.ebuild:
  Mark alpha/ia64/m68k/s390/sh/sparc stable #407937.

  25 Mar 2012; Markus Meier <maekke@gentoo.org> bash-4.2_p20.ebuild:
  arm stable, bug #407937

  18 Mar 2012; Mike Frysinger <vapier@gentoo.org> bash-4.2_p20.ebuild,
  bash-4.2_p24.ebuild:
  Use :alpha: rather than a-z in sed #408369 by step.

  14 Mar 2012; Jeroen Roovers <jer@gentoo.org> bash-4.2_p20.ebuild:
  Stable for HPPA (bug #407937).

  13 Mar 2012; Jeff Horelick <jdhore@gentoo.org> bash-4.2_p20.ebuild:
  marked x86 per bug 407937

  13 Mar 2012; Mike Frysinger <vapier@gentoo.org> bash-4.2_p20.ebuild,
  bash-4.2_p24.ebuild:
  Avoid regenerating bash info page #407985 by Jory A. Pratt.

  13 Mar 2012; Brent Baude <ranger@gentoo.org> bash-4.2_p20.ebuild:
  Marking bash-4.2_p20 ppc for bug 

  13 Mar 2012; Agostino Sarubbo <ago@gentoo.org> bash-4.2_p20.ebuild:
  Stable for amd64, wrt bug #407937

  12 Mar 2012; Brent Baude <ranger@gentoo.org> bash-4.2_p20.ebuild:
  Marking bash-4.2_p20 ppc64 for bug 407937

*bash-4.2_p24 (12 Mar 2012)

  12 Mar 2012; Mike Frysinger <vapier@gentoo.org> bash-4.2_p20.ebuild,
  +bash-4.2_p24.ebuild:
  Version bump #407927 by Lars Wendler (Polynomial-C).

*bash-4.2_p20 (24 Nov 2011)

  24 Nov 2011; Mike Frysinger <vapier@gentoo.org> +bash-4.2_p20.ebuild:
  Version bump.

  01 Nov 2011; Mike Frysinger <vapier@gentoo.org>
  files/bash-4.2-parallel-build.patch:
  Fix parallel build failures with mkbuiltin.

  07 Oct 2011; Mike Frysinger <vapier@gentoo.org> bash-4.2_p10.ebuild,
  +files/bash-4.2-parallel-build.patch: