@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX autoconf-mktime-2.59.patch 4686 RMD160 64f719df39ae0a17999cb6b87ce9c5e275fcd7eb SHA1 4355b22b415c703c8ca9cc1b7b89ec44edc7ad4c SHA256 3c16de6cbe24fc806c29390eaf4c7e1d9ceda3df523bb18941cf0a3184356bba
 AUX bash-3.0-configs.patch 2538 RMD160 00e8015531efb6a59298782581928f1aff2247e6 SHA1 7f4615de4ac2219372d34dfbead3311fcfdfab2a SHA256 09d11c8e6158b2346fc39830d75af2210cd1cec7c8e9965aed96b66213310d3f
 AUX bash-3.0-etc-inputrc.patch 1443 RMD160 8bf34837bef20bfc7062e32e4a23aa6af9ef2b49 SHA1 a58b9011f61e7e60be0fcd8741d91292222eff61 SHA256 b43736c32ed9d9088ee1cbbff11b78d6f6993492f9da3e1eb5151a64a082d025
@@ -186,8 +189,25 @@ EBUILD bash-4.1_p11.ebuild 5660 RMD160 307a3558a0b42808eacdd776841833cc40606d3d 
 EBUILD bash-4.1_p7.ebuild 5647 RMD160 d304c9b6eeb384f9baa4a84e262f4725a2fad7b0 SHA1 7bbd8c7145bd494ff86fde53b9ba63a9aa1dd3de SHA256 f5d0f3136170e346cd97f30cc735f1e007183c5ae73bedb12b596c5b26323feb
 EBUILD bash-4.1_p9.ebuild 5647 RMD160 a4735eb85dacda84c5e616c40b18d3bd6090c2b8 SHA1 fb124d72adcab6e86240cfc991c18eb0681333a1 SHA256 9dfe8f46a4e24aa1a994e886fae5a80228449b0471e0856368e521ad2fd36588
 EBUILD bash-4.2_p10.ebuild 5604 RMD160 82d81068ca21f03dfa36e3f8e4b1506e91ef4a4d SHA1 65ae606556415c0cd82d1a8373aeb8574447650a SHA256 f0359ff78cd7c8b62e6e613779d83da25c158d430f2c54dee9c3d5fc2e1baf40
-EBUILD bash-4.2_p20.ebuild 5963 RMD160 05a29c0324d629243de8b2ad8da8a3d550e9a45a SHA1 7706d77dd20da9dcaf82584b27ac84cf4705651f SHA256 85c4f6ae4a25f6c188ad074dfbc2e8750a146b93018b098b19dcebee1baba801
-EBUILD bash-4.2_p24.ebuild 6024 RMD160 1805c8b145e2678a1c741246e1d2a703949cd904 SHA1 876c2ed15b4ae81e90bb9060234707292fc8dd8d SHA256 0f8def1bba78a1b9ade8cce3baf3771e46dd0ddf3e7d8c31916ad7b44aa1c1cb
+EBUILD bash-4.2_p20.ebuild 5965 RMD160 5bf3f3fa892d5490c8dec13518ebaa9d573b2d89 SHA1 e2fd1482e2c21be4f57ca78cd761b684cc5a88b3 SHA256 3c9e66d81250a771e0334626cb760da2b4c980f5338dfec24bc27f378009d0f9
+EBUILD bash-4.2_p24.ebuild 6027 RMD160 45086b958942b25d68e73e29e3009479dd41433c SHA1 5a79cce1e8eea567da0b2e7f102da6a60bb5e12d SHA256 8aef71bdf019bfc1b1cd4016ff429b259ef190f2c01252cf12e26b08a62922d1
 EBUILD bash-4.2_p8-r1.ebuild 5546 RMD160 d60f2c28b28dcb55b063f16b8ee5400b88e0f6d6 SHA1 096e27b3ead5a1ec0756f88471db3084bee98f01 SHA256 466fd15f97af04edd495bf0452c8bebb0725288c2503362ff3d0088e849ca105
-MISC ChangeLog 46911 RMD160 6b074a8e37ceef1de630f774c63ae8926409e3c0 SHA1 fcb3fc03115049e0ba6c614d01bd921e5d5fcb80 SHA256 080e52a4571b3a1aab03f49c4b047d0cb41b0ab3fbf306b42c05ffce1a615a15
+MISC ChangeLog 47159 RMD160 edc45053e2d1450eeaf735ab34bd98f22d2d4116 SHA1 9b84536b96d4202ce6f78e9eb938daca5ce3f633 SHA256 c4b550147dfdbb91b96973ef1fae89188a9fbfe9de6542e0f9388f46faecced0
 MISC metadata.xml 568 RMD160 c778ff1669af3c368238bcf481b344b741f0d6e1 SHA1 8d74d1c518351ad8085c9c26a5f2554d8c768b20 SHA256 48d380acb97dda0a7f4bd918b208d11367a8367d289b0a2d78ef08ef9a4e2562
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.18 (GNU/Linux)
+
+iQIcBAEBAgAGBQJPc1UfAAoJELEHsLL7fEFWpSkP/09HmCy8azEZS0JUbgh/KYBx
+IO6vJZnzAAnRo0Hb6ctMJX8CFqXc6krCa0WbbaPpvb0RIEZTLe+pFJfB0h510ADj
+EftiyOaBnC9nZTtgQ/0kDCKRWSI0d7g+d7n1PNGWckqR40Blv0OQf7GtD1cgPrY/
+IzHOhLeou6I2PpanFA9WlIVnuaE662x3AcotwpCOHy01sJwmDz2kvIfC8AXS67bI
+p1GyhP0v2CHWoSCNjCmj64Fh2mxuyhnVRBm6m4OXy+i86pBINqJZzn7SdfdSk0SA
+uzzdK3/hz8Ncr1a0I7k60i1bOa4BRswtzkncWKzPjaKzmLyicAxPtTpZHkZm9bjn
+k2So+I/IucWRJUDobxKCA/xYrraD9Zcra0C1vEphfdFQDVxGxJqhzwHqQ5lPUF4j
+2gzkrCdy3bYDKVqEJyxTSlX/4XCSl9nkY0t0MT6DOhodMnIHHXMayjIy9/Y/d2O/
+bkvUl14EaUoSWOmBo+dVWqExvu76Cgz77NfwBLCAmC26Uxt/aVUiVWNe6bnpikzy
+ZfvDA14ACwCxWCy9j+pzScbTqX7pSV5Y9AY+h0MwIUI71T1TreRoLRlsCLP9D/0U
+OnMuISiaPIW3sJsQBxaRAuKfeKcg/nN9w+GHwo/rspEm8PQlLeHi2hWoPts8Zj3W
+NJz6O8r9RPtd4DmjRlbn
+=PiBQ
+-----END PGP SIGNATURE-----
