@@ -1,6 +1,9 @@
 # ChangeLog for app-shells/bash
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-shells/bash/ChangeLog,v 1.306 2012/03/28 18:13:09 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-shells/bash/ChangeLog,v 1.307 2012/03/28 18:14:48 vapier Exp $
+
+  28 Mar 2012; Mike Frysinger <vapier@gentoo.org> bash-4.2_p24.ebuild:
+  Make readline optional.
 
   28 Mar 2012; Mike Frysinger <vapier@gentoo.org> bash-4.2_p20.ebuild,
   bash-4.2_p24.ebuild:
